<?xml version="1.0"?>
<package format="3">
  <name>moveit2_wrapper</name>
  <version>1.0.0</version>
  <description>Wrapper class for the moveit2 moveit_cpp API</description>

  <author email="mariunil@stud.ntnu.no">Marius Nilsen</author>
  <maintainer email="mariunil@stud.ntnu.no">Marius Nilsen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>orocos_kdl</depend>
  <depend>angles</depend>
  <depend>tf2_eigen</depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
